WMS avanzado. Coje las capas, pero tiene meterlas en el tool. Hay un problema de async...

--- a/js/dijit/templates/wmsDialog.html
+++ b/js/dijit/templates/wmsDialog.html
@@ -3,6 +3,6 @@
     <div data-dojo-attach-point="_dialogNode">
     <div class="${css.wmsDialogContent}" id ="wmsDialogDiv">
        
-        <h1> Capas wms</h1>
+        <div data-dojo-attach-point="_layersNode"></div>
     </div>
 </div>
