Capas WMS en dialog. Falta darel formato...

--- a/js/dijit/templates/wmsDialog.html
+++ b/js/dijit/templates/wmsDialog.html
@@ -3,6 +3,6 @@
     <div data-dojo-attach-point="_dialogNode">
     <div class="${css.wmsDialogContent}" id ="wmsDialogDiv">
        
-        <div data-dojo-attach-point="_layersNode"></div>
+        <div data-dojo-attach-point="_layersNode" id="layerButtons"></div>
     </div>
 </div>
