--- a/css/nuevosWidgets.css
+++ b/css/nuevosWidgets.css
@@ -1,8 +1,24 @@
-﻿#wmsDialogDiv h1 {
+﻿/*dialogo de wms tool*/
+#wmsDialogDiv div{
 
     text-align:center;
 }
+
+#wmsDialogDiv span{
+
+    margin:5px;
+    font-size:16px;
+}
+
+
+
+
+
+/*dialogo de incidencias*/
+
 #incidenciasDialogDiv h1 {
 
     text-align:center;
 }
+
+
