cambios en incidencias
cambios en incidencias

--- a/js/dijit/templates/incidenciasDialog.html
+++ b/js/dijit/templates/incidenciasDialog.html
@@ -1,8 +1,12 @@
-﻿<div class="incidenciasDialogClass" role="presentation">
-
+﻿ <div class="incidenciasDialogClass" role="presentation">
     <div data-dojo-attach-point="_dialogNode">
     <div class="${css.incidenciasDialogContent}" id ="incidenciasDialogDiv">
        
-        <h1> Panel de Incidencias</h1>
+        <div data-dojo-attach-point="_layersNode" id="layerButtons"></div>       
+        
+        <div class="contenedor">
+            <button class="btn_incidencias">Crear Incidencia</button>
+        </div>
+
     </div>
 </div>
