--- a/js/dijit/templates/wmsDialog.html
+++ b/js/dijit/templates/wmsDialog.html
@@ -1,8 +1,8 @@
 <div class="wmsDialogClass" role="presentation">
-
     <div data-dojo-attach-point="_dialogNode">
-    <div class="${css.wmsDialogContent}" id ="wmsDialogDiv">
-       
-        <div data-dojo-attach-point="_layersNode" id="layerButtons"></div>
+        <div class="${css.wmsDialogContent}" id="wmsDialogDiv">
+
+            <div data-dojo-attach-point="_layersNode" id="layerButtons"></div>
+        </div>
     </div>
 </div>
