--- a/js/dijit/templates/incidenciasDialog.html
+++ b/js/dijit/templates/incidenciasDialog.html
@@ -1,16 +1,16 @@
 ﻿ <div class="incidenciasDialogClass" role="presentation">
     <div data-dojo-attach-point="_dialogNode">
-    <div class="${css.incidenciasDialogContent}" id ="incidenciasDialogDiv">
+        <div class="${css.incidenciasDialogContent}" id ="incidenciasDialogDiv">
        
-        <div data-dojo-attach-point="_layersNode" id="layerButton"></div>
+            <div data-dojo-attach-point="_layersNode" id="layerButton"></div>
         
-        <div class='contenedor'>
-            <button class="btn_incidencias" onclick="Popup('incidenciasForm')">Crear Incidencia</button>
-        </div>       
+            <div class='contenedor'>
+                <button class="btn_incidencias" onclick="Popup('incidenciasForm')">Crear Incidencia</button>
+            </div>       
 
-    </div>
+        </div>
 </div>
-<script>
+<!--script>
     function Popup(id) {
         if (dojo.byId(id).style.display == "none") {
             dojo.byId(id).style.display = "block";
@@ -20,4 +20,4 @@
             dojo.byId(id).style.display = "none";
         }
     }
-</script>
+</script-->
