Comentarios para duda de Jon. Cambios formulario
Comentarios para que Jon pueda ayudarme con la duda. Cambios en el
formulario de incidencias

--- a/js/dijit/templates/incidenciasDialog.html
+++ b/js/dijit/templates/incidenciasDialog.html
@@ -4,9 +4,9 @@
        
             <div data-dojo-attach-point="_layersNode" id="layerButton"></div>
         
-            <div class='contenedor'>
+            <!--<div class='contenedor'>
                 <button class="btn_incidencias" onclick="Popup('incidenciasForm')">Crear Incidencia</button>
-            </div>       
+            </div> -->   
 
         </div>
 </div>
