Se corrige rallita de bookmarks

--- a/css/nuevosWidgets.css
+++ b/css/nuevosWidgets.css
@@ -105,3 +105,9 @@
 .esriPopup.light .titlePane, .esriPopup.dark .titlePane {
 height:30px;
 }
+
+/*Bookmar widget tamaño raro tambine , se corrige*/
+
+.esriBookmarkItem {
+height:30px;
+}
