Creando herramienta buscador

--- a/css/nuevosWidgets.css
+++ b/css/nuevosWidgets.css
@@ -111,3 +111,9 @@ height:30px;
 .esriBookmarkItem {
 height:30px;
 }
+
+/*dialogo de buscador tool*/
+#buscadorDialogDiv div{
+
+    text-align:center;
+}
