--- a/js/dijit/templates/buscadorDialog.html
+++ b/js/dijit/templates/buscadorDialog.html
@@ -3,6 +3,83 @@
         <div class="${css.buscadorDialogContent}" id="buscadorDialogDiv">
 
             <div data-dojo-attach-point="_layersNode" id="layerButtons"></div>
+
+            <!-- Formulario buscador -->
+            <div id="buscadorDiv" ng-controller="buscadorController as buscador" >
+                <form name="buscadorForm" ng-submit="buscadorForm.$valid && LanzarBuscador()" novalidate>
+                <div class="control-group" ng-class="{true: 'error'}[submitted && buscadorForm.email.$invalid]">
+                     <fieldset class="form-group" >
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>Provincia:</label>
+                                <div class="controls">
+                                    <select name="Provincia" class="form-control" ng-model="provincia" ng-options="provincia for provincia in provincias" ><option></option></select>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                     <fieldset class="form-group" >
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>Municipio:</label>
+                                <div class="controls">
+                                    <select name="Municipio" class="form-control" ng-model="municipio" ng-options="municipio for municipio in municipios" ><option></option></select>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form-group" >
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>Poblaci&oacute;n:</label>
+                                <div class="controls">
+                                    <select name="poblacion" class="form-control" ng-model="poblacion" ng-options="poblacion for poblacion in poblaciones" ><option></option></select>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form-group" >
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>Carretera:</label>
+                                <div class="controls">
+                                    <select name="carretera" class="form-control" ng-model="carretera" ng-options="carretera for carretera in carreteras" ><option></option></select>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form-group" >
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>PK:</label>
+                                <div class="controls">
+                                    <select name="PK" class="form-control" ng-model="PK" ng-options="pk for pk in pks" ><option></option></select>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form-group" style="width:140px; float:left">
+                        <label>Longitud:</label>
+                        <div class="controls">
+                            <input name="X" type="text" ng-model="Longitud" class="form-control"/>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form-group" style="width:140px">
+                        <label>Latitud:</label>
+                        <div class="controls">
+                            <input name="Latitud" type="text" ng-model="Latitud" class="form-control"/>
+                        </div>
+                    </fieldset>
+                    </div>
+
+                    <div style="text-align:center; margin-left:auto; margin-right:auto">
+                        <fieldset class="form-group">
+                        <input class="btn btn-primary pull-right" type="button" value="Cancel" ng-click="Cancelbusqueda()" style="margin-left:5px; float:left"/>
+                        <input class="btn btn-primary pull-right" type="submit" value="Submit" ng-click="submitted=true" />
+                    </div>
+                </form>
+            </div>
+
         </div>
     </div>
 </div>
