--- a/js/dijit/templates/incidenciasDialog.html
+++ b/js/dijit/templates/incidenciasDialog.html
@@ -1,12 +1,13 @@
-﻿ <div class="incidenciasDialogClass" role="presentation">
+﻿<div class="incidenciasDialogClass" role="presentation">
     <div data-dojo-attach-point="_dialogNode">
-        <div class="${css.incidenciasDialogContent}" id ="incidenciasDialogDiv">
-       
+        <div class="${css.incidenciasDialogContent}" id="incidenciasDialogDiv">
+
             <div data-dojo-attach-point="_layersNode" id="layerButton"></div>
-        
+
             <!--<div class='contenedor'>
                 <button class="btn_incidencias" onclick="Popup('incidenciasForm')">Crear Incidencia</button>
-            </div> -->   
+            </div> -->
 
         </div>
+    </div>
 </div>
