--- a/css/nuevosWidgets.css
+++ b/css/nuevosWidgets.css
@@ -118,6 +118,49 @@ height:30px;
     text-align:center;
 }
 
+#buscaForm 
+{
+    width:600px;
+    height:400px;
+    position:absolute;
+    top:20%;
+    left:20%;
+    margin:auto;
+    background-color: transparent;
+    display:none;
+    z-index: 9999;
+}
+
+.btn_busqueda {
+  background: #157abd;
+  background-image: -webkit-linear-gradient(top, #157abd, #08588a);
+  background-image: -moz-linear-gradient(top, #157abd, #08588a);
+  background-image: -ms-linear-gradient(top, #157abd, #08588a);
+  background-image: -o-linear-gradient(top, #157abd, #08588a);
+  background-image: linear-gradient(to bottom, #157abd, #08588a);
+  -webkit-border-radius: 9;
+  -moz-border-radius: 9;
+  border-radius: 9px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin-left: 20px;
+  margin-top: 80px;
+}
+
+.btn_busqueda:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+
 /*login panel*/
 
 #loginPanel {
