Modificaciones en herramienta buscador
Ahora ya funciona, el zoom a municipio y a Población

--- a/js/dijit/templates/buscadorDialog.html
+++ b/js/dijit/templates/buscadorDialog.html
@@ -6,8 +6,9 @@
                 <form id="formbusquedapanel">
                     <input class="myradiobuttons" type="radio" name="busqueda" id="radioOne" value="Carretera"/> <label for="radioOne">Buscar por Carretera</label> <br />
                     <input class="myradiobuttons" type="radio" data-dojo-type="dijit/form/RadioButton" name="busqueda" id="radioTwo" value="CarreterayPK"/> <label for="radioTwo">Buscar por Carretera y PK</label> <br />
-                    <input class="myradiobuttons" type="radio" data-dojo-type="dijit/form/RadioButton" name="busqueda" id="radioThree" value="Poblacion"/> <label for="radioTwo">Buscar por Poblacion</label> <br />
-                    <input class="myradiobuttons" type="radio" data-dojo-type="dijit/form/RadioButton" name="busqueda" id="radioFour" value="Coordenadas"/> <label for="radioTwo">Buscar por Coordenadas</label> <br />
+                    <input class="myradiobuttons" type="radio" data-dojo-type="dijit/form/RadioButton" name="busqueda" id="radioThree" value="Municipio"/> <label for="radioTwo">Buscar por Municipio</label> <br />
+                    <input class="myradiobuttons" type="radio" data-dojo-type="dijit/form/RadioButton" name="busqueda" id="radioFour" value="Poblacion"/> <label for="radioTwo">Buscar por Poblacion</label> <br />
+                    <input class="myradiobuttons" type="radio" data-dojo-type="dijit/form/RadioButton" name="busqueda" id="radioFive" value="Coordenadas"/> <label for="radioTwo">Buscar por Coordenadas</label> <br />
                 </form>
             </div>
             <!--script>
